syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.rvg.grpc";
option java_outer_classname = "StockTradingProto";

service StockTradingService {
  rpc GetStockPrice (StockRequest) returns (StockResponse);
  rpc SubscribeStockPrice (StockRequest) returns (stream StockResponse);
  rpc BulkStockOrder (stream StockOrder) returns (OrderSummary);
  rpc liveTrading (stream StockOrder) returns (stream TradeStatus);
}

message StockRequest {
  string stock_symbol = 1;
}

message StockResponse {
  string stock_symbol = 1;
  double price = 2;
  string timestamp = 3;
}

message StockOrder {
  string order_id = 1;
  string stock_symbol = 2;
  int32 quantity = 3;
  double price = 4;
  string order_type = 5; // "BUY" or "SELL"
}

message OrderSummary {
  int32 total_orders = 1;
  double total_amount = 2;
  int32 success_count = 3;
}

message TradeStatus {
  string order_id = 1;
  string status = 2; // "PENDING", "EXECUTED", "FAILED"
  string message = 3;
  string timestamp = 4;
}